# telnetpp

./: .appveyor.yml  .clang-tidy  .codedocs  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  Doxyfile.in  LICENSE  README.md  annotated.html  basic__client_8hpp_source.html  basic__server_8hpp_source.html  binary_2client_8hpp_source.html  binary_2detail_2protocol_8hpp_source.html  binary_2server_8hpp_source.html  charset_2detail_2protocol_8hpp_source.html  charset_2server_8hpp_source.html  classes.html  classtelnetpp_1_1client__option-members.html  classtelnetpp_1_1client__option.html  classtelnetpp_1_1command-members.html  classtelnetpp_1_1command.html  classtelnetpp_1_1element.html  classtelnetpp_1_1negotiation-members.html  classtelnetpp_1_1negotiation.html  classtelnetpp_1_1option-members.html  classtelnetpp_1_1option.html  classtelnetpp_1_1options_1_1basic__client-members.html  classtelnetpp_1_1options_1_1basic__client.html  classtelnetpp_1_1options_1_1basic__server-members.html  classtelnetpp_1_1options_1_1basic__server.html  classtelnetpp_1_1options_1_1binary_1_1client-members.html  classtelnetpp_1_1options_1_1binary_1_1client.html  classtelnetpp_1_1options_1_1binary_1_1server-members.html  (+238 more)
.ci/: fetch_system_dependencies.sh
.github/workflows/: build.yml  coverage.yml  release.yml
.travis/: fetch_system_dependencies.sh
cmake/: telnetpp-config.cmake.in
examples/rot13server/: CMakeLists.txt  README.md  conanfile.txt
examples/rot13server/include/: connection.hpp  core.hpp
examples/rot13server/src/: connection.cpp  rot13_server.cpp
include/telnetpp/: byte_converter.hpp  client_option.hpp  command.hpp  command_router.hpp  core.hpp  element.hpp  generator.hpp  negotiation.hpp  negotiation_router.hpp  option.hpp  parser.hpp  protocol.hpp  router.hpp  routing_visitor.hpp  server_option.hpp  session.hpp  subnegotiation.hpp  subnegotiation_router.hpp  telnetpp.hpp  token.hpp  version.hpp.in
include/telnetpp/detail/: command_router.hpp  generate_helper.hpp  generator.hpp  hash.hpp  lambda_visitor.hpp  negotiation_router.hpp  option.hpp  overloaded.hpp  parse_helper.hpp  parse_state.hpp  parser.hpp  registration.hpp  return_default.hpp  router.hpp  routing_visitor.hpp  subnegotiation_router.hpp
include/telnetpp/options/: basic_client.hpp  basic_server.hpp  echo.hpp  msdp.hpp  naws.hpp  new_environ.hpp  subnegotiationless_client.hpp  subnegotiationless_server.hpp  suppress_ga.hpp  terminal_type.hpp
include/telnetpp/options/binary/: client.hpp  server.hpp
include/telnetpp/options/binary/detail/: protocol.hpp
include/telnetpp/options/charset/: server.hpp
include/telnetpp/options/charset/detail/: protocol.hpp
include/telnetpp/options/echo/: client.hpp  server.hpp
include/telnetpp/options/echo/detail/: protocol.hpp
include/telnetpp/options/mccp/: client.hpp  codec.hpp  compressor.hpp  decompressor.hpp  mccp.hpp  server.hpp
include/telnetpp/options/mccp/detail/: compressor.hpp  protocol.hpp  zlib_compressor.hpp
include/telnetpp/options/msdp/: client.hpp  server.hpp  variable.hpp
include/telnetpp/options/naws/: client.hpp  server.hpp
include/telnetpp/options/new_environ/: client.hpp  protocol.hpp  server.hpp
include/telnetpp/options/suppress_ga/: client.hpp  server.hpp
include/telnetpp/options/terminal_type/: client.hpp
scripts/: next_release.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+13 more)
src/: byte_converter.cpp  client_option.cpp  command.cpp  dummy.cpp  element.cpp  negotiation.cpp  routing_visitor.cpp  server_option.cpp  session.cpp  subnegotiation.cpp
src/detail/: generate_helper.cpp  parse_helper.cpp  registration.cpp  routing_visitor.cpp
src/options/: msdp.cpp
src/options/binary/: client.cpp  server.cpp
src/options/charset/: server.cpp
src/options/echo/: client.cpp  server.cpp
src/options/mccp/: client.cpp  codec.cpp  compressor.cpp  decompressor.cpp  server.cpp
src/options/mccp/detail/: zlib_compressor.cpp
src/options/mccp/zlib/: compressor.cpp  decompressor.cpp
src/options/msdp/: client.cpp  server.cpp  variable.cpp
src/options/msdp/detail/: decoder.cpp  encoder.cpp
src/options/naws/: client.cpp  server.cpp
src/options/new_environ/: client.cpp  server.cpp
src/options/new_environ/detail/: request_parser.cpp  response_parser.cpp  stream.cpp
src/options/suppress_ga/: client.cpp  server.cpp
src/options/terminal_type/: client.cpp
test/: .mccp_codec_test.cpp.kate-swp  binary_client_test.cpp  binary_server_test.cpp  byte_converter_test.cpp  charset_server_test.cpp  client_option_test.cpp  command_router_fixture.cpp  command_router_test.cpp  command_test.cpp  echo_client_test.cpp  echo_server_test.cpp  element_test.cpp  expect_elements.cpp  expect_elements.hpp  expect_tokens.cpp  expect_tokens.hpp  generator_test.cpp  in_memory_session_test.cpp  mccp_client_test.cpp  mccp_codec_test.cpp  mccp_compressor_test.cpp  mccp_decompressor_test.cpp  mccp_server_test.cpp  mccp_zlib_compressor_test.cpp  mccp_zlib_decompressor_test.cpp  msdp_client_test.cpp  msdp_server_robustness_test.cpp  msdp_server_test.cpp  msdp_variable_test.cpp  naws_client_test.cpp  naws_server_test.cpp  negotiation_router_test.cpp  negotiation_test.cpp  new_environ_client_test.cpp  new_environ_server_test.cpp  parser_test.cpp  pass_through_test.cpp  q_method_test.cpp  routing_visitor_test.cpp  server_option_test.cpp  (+7 more)
test/fakes/: fake_channel.hpp  fake_client_option.hpp  fake_compressor.hpp  fake_decompressor.hpp  fake_server_option.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
(+16 files in other folders)
